...
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_linear_layout0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/button_linear_layout1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:orientation="horizontal">

            <Button
...
                android:id="@+id/comments_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="Comments" />

            <Button
                android:id="@+id/add_trial_button"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:text="Add Trial" />
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/button_linear_layout2"
            android:layout_width="wrap_content"
...
