<?xml version="1.0" encoding="utf-8"?>
<!--https://stackoverflow.com/questions/16556106/how-to-add-space-between-items-in-android-listview/16556203-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f5f5"
    android:orientation="vertical">

    <include
        layout = "@layout/custom_toolbar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/exp_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:clickable="true"
            android:focusable="true"
            app:backgroundTint="@color/custom_Yellow_dark"
            app:srcCompat="@android:drawable/ic_input_add"
            android:layout_margin="10dp"/>

        <ListView
            android:id="@+id/owned_experiment_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="5dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="8dp" />

    </FrameLayout>


</LinearLayout>
